quick update to run_targets.R

--- a/run_targets.Rmd
+++ b/run_targets.Rmd
@@ -112,7 +112,7 @@ to successfully run this workflow.
 ```{r run_targets, echo = F}
 library(targets)
 
-tar_make(p99_make_target_ids)
+#tar_make()
 
-tar_visnetwork()
+#tar_visnetwork()
 ```
